--- a/blogpost.html
+++ b/blogpost.html
@@ -13,6 +13,17 @@
                     inicio donde vamos a explicar
                     las cosas increiles que se
                     pueden hacer con ramas</p>
+                    <p>
+                        Los logs son la mejor 
+                        forma de compartir
+                        informacion y tus ideas.
+                        mucho mas que ir a 
+                        conferencias o salir en
+                        Youtube. Excepto si eres
+                        un rockstar. pero
+                        estadisticamente no lo
+                        eres.... por ahora.
+                    </p>
             </div>
         </div>
     </body>
